# threads

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  README.md  main.cpp  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: Makefile  lib.cpp  lib.hpp  main.cpp
src/: main.cpp
test/: CMakeLists.txt  threads_test.cpp
test/source/: threads_test.cpp
